# substack-mcp

./: .gitignore  CLAUDE.md  Dockerfile  fly.toml  pyproject.toml  shortwave-mcp-spec.md  substack-feeds.txt
docs/: DECISIONS.md  PRD.md  PROGRESS.md  SPRINT-PROMPT.md  SUBSTACK_MCP_REFERENCE.md
src/: __main__.py  dedup.py  server.py  substack_client.py  summarizer.py  voice_check.py
src/oauth/: db.py  pages.py  provider.py
src/tools/: activity_feed.py  auth.py  comment_on_post.py  delete_content.py  drafts.py  follow.py  fyp_feed.py  like.py  likes.py  mark_seen.py  my_posts.py  navigator.py  note_drafts.py  note_replies.py  notes_feed.py  post_content.py  publish_note.py  react.py  restack.py  restacks.py  save_post.py  saved_posts.py  search.py  search_posts.py  search_trending.py  subscription_feed.py  subscriptions.py  upload_image.py
tests/integration/: test_dedup_concurrency.py  test_dedup_integration.py
tests/unit/: test_activity_feed.py  test_auth.py  test_comment_on_post.py  test_dedup.py  test_delete_content.py  test_drafts.py  test_follow.py  test_fyp_feed.py  test_like.py  test_likes.py  test_mark_seen.py  test_my_posts.py  test_navigator.py  test_note_drafts.py  test_note_replies.py  test_notes_feed.py  test_post_content.py  test_publish_note.py  test_react.py  test_restack.py  test_restacks.py  test_save_post.py  test_saved_posts.py  test_search.py  test_search_posts.py  test_search_trending.py  test_server.py  test_subscription_feed.py  test_subscriptions.py  test_summarizer.py  test_upload_image.py  test_voice_check.py
(+2 files in other folders)
