[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "substack-mcp"
version = "1.0.0"
description = "MCP server for Substack content ingestion"
requires-python = ">=3.12"
dependencies = [
    "mcp[server]>=1.0.0",
    "httpx>=0.27.0",
    "google-genai>=1.0.0",
    "markdownify>=0.14.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
